# nanovg-android

./: .gitignore  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nanovg-lib.cpp  nanovg.c  nanovg_gl.h
app/src/main/java/org/lwjgl/: BufferUtils.java
app/src/main/java/org/lwjgl/nanovg/: NVGColor.java  NVGPaint.java  NanoVG.java
app/src/main/java/org/lwjgl/system/: NativeResource.java
gradle/wrapper/: gradle-wrapper.properties
